--- a/templates/editepage.html
+++ b/templates/editepage.html
@@ -9,14 +9,17 @@
             width: 400px;
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 
 <body>
     <textarea type="text" id="editearea"></textarea>
+    <div class="view"></div>
     <script>
+        var viewpannel = document.querySelector(".view")
         var changeset = new Object()
         changeset.actions = new Array()
-        changeset.localversion = 0
+        changeset.version = 0
         doc = document.querySelector('textarea')
         doc.addEventListener('input', e => {
             changeset.actions.push({
@@ -27,20 +30,26 @@
             //console.log(changeset.actions)
             //console.log(JSON.stringify(changeset))
         })
-
-        window.addEventListener("load", function () {
-            rqversion()
-            rqnewestdoc()
-        })
         //请求最新版本
+
+        rqversion()
+
         function rqnewestdoc() {
             fetch('/root/first trial/rqnewestdoc', {
+                method: 'POST',
+                body: JSON.stringify(changeset.version)
+            }).then(res => res.json().then(data => {
+                if (data)
+                    doc.value = data
+            }))
+        }
+        function firstdoc() {
+            fetch('/root/first trial/firstdoc', {
                 method: 'GET'
             }).then(res => res.json().then(data => {
                 doc.value = data
             }))
         }
-
         //请求版本号
         function rqversion() {
             fetch('/root/first trial/requestversion', {
@@ -48,6 +57,8 @@
             }).then(res2 => res2.json().then(data => {
                 //console.log(data)
                 changeset.version = Number(data)
+                firstdoc()
+                rqnewestdoc()
                 console.log(changeset.version)
             }))
         }
@@ -59,14 +70,16 @@
                 fetch('/root/first trial/merge', {
                     method: 'POST',
                     body: JSON.stringify(changeset)
-                }).then(res => res.json().then(data => {
-                    //console.log(data)
-                    //if (changeset.actions === []) {
-                    doc.value = localApply(data, doc.value)
-                    //}
-                }))
+                }).then(res => {
+                    res.json().then(data => {
+                        console.log(Boolean(changeset.actions.length === 0))
+                        if (changeset.actions === []) {
+                            doc.value = localApply(data, doc.value)
+                        }
+                    })
+                })
                 changeset.actions = new Array()
-                changeset.localversion++
+                changeset.version++
             }
             else
                 rqnewestdoc()
