--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>登录</title>
     <link rel="stylesheet" type="text/css" href="../static/style_for_login.css">
+    <script src="../static/md5.js"></script>
 </head>
 
 <body>
@@ -26,7 +27,7 @@
             <br>
 
 
-            <a href="">忘记密码？</a>
+            <a href="/forgetpw">忘记密码？</a>
 
             <div class="buttons">
                 <input type="submit" value="登录" class="button">
