--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main">
         <p class="head">注册</p>
-        <form method="POST" action='/userregister'>
+        <form method="POST" action='/register'>
             {% for message in get_flashed_messages(with_categories=True) %}
             <div class="flash">
                 {{ message[1] }}
