--- a/templates/editpage.html
+++ b/templates/editpage.html
@@ -13,9 +13,29 @@
 </head>
 
 <body>
-    <textarea type="text" id="editearea"></textarea>
+    <div class="status_bar">
+        {% if current_user.is_authenticated %}
+
+        <li>
+            <a href="{{ url_for('logout') }}"> 注销 </a>
+        </li>
+        <li>
+            <a href="#">用户:{{ current_user.username }} &nbsp;</a>
+        </li>
+        {% else %}
+
+        <li>
+            <a href="{{ url_for('userregister') }}"> 注册</a>
+        </li>
+        <li>
+            <a href="{{ url_for('login') }}"> 登录 &nbsp;</a>
+        </li>
+        {% endif %}
+    </div>
+    <div id="editor"></div>
+    <textarea type="text" id="editearea" d={{data}}></textarea>
     <div class="view"></div>
-    <script src="../static/editpage.js"></script>
+    <script src="../static/js/editpage.js"></script>
 </body>
 
 </html>
