--- a/templates/login.html
+++ b/templates/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>登录</title>
-    <link rel="stylesheet" type="text/css" href="../static/style_for_login.css">
-    <script src="../static/md5.js"></script>
+    <link rel="stylesheet" type="text/css" href="../static/style/style_for_login.css">
+    <script src="../static/js/md5.js"></script>
 </head>
 
 <body>
