--- a/templates/userdetail.html
+++ b/templates/userdetail.html
@@ -91,6 +91,18 @@
         document.querySelector(".newdoc").addEventListener("click", () => {
             window.location.href = '/userdoc/' + username + '/new'
         })
+        function rqmydocs() {
+            let url = "/userdoc/" + username + "/all-docs";
+            fetch(url, {
+                method: "GET",
+            }).then(res =>
+                res.json().then(data => {
+                    if (data) {
+                        console.log(data)
+                    }
+                })
+            );
+        }
     </script>
 </body>
 
