--- a/static/style/style_for_editpage.css
+++ b/static/style/style_for_editpage.css
@@ -37,9 +37,10 @@ body {
 }
 
 .usericon {
-  height: 28px;
-  width: 28px;
-  margin: 0 10px;
+  height: 24px;
+  width: 24px;
+  margin: 3px 10px;
+  border-radius: 3px;
 }
 
 .user {
