--- a/static/style/style_for_userdetail.css
+++ b/static/style/style_for_userdetail.css
@@ -49,6 +49,7 @@ a {
   /*width: 100%;*/
   height: 100%;
   padding-bottom: 71px;
+  min-width: 700px;
 }
 
 .content-top {
@@ -92,6 +93,7 @@ a {
   white-space: nowrap;
   border: 1px solid transparent;
   margin: 0 10px;
+  cursor: pointer;
 }
 
 .logout {
@@ -104,9 +106,10 @@ a {
 }
 
 .usericon {
-  height: 28px;
-  width: 28px;
-  margin: 0 10px;
+  height: 24px;
+  width: 24px;
+  margin: 3px 10px;
+  border-radius: 3px;
 }
 
 .user {
@@ -115,6 +118,7 @@ a {
   vertical-align: middle;
   line-height: 28px;
   user-select: none;
+  cursor: pointer;
 }
 
 .list-wrapper {
